Suggest regex for tokenization.

--- a/token_counts.ipynb
+++ b/token_counts.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "term-statistics.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOHslVIiS9/xUjnjP8V4O87",
+      "authorship_tag": "ABX9TyOXuvwKeDw7VEOAYG5yCiB9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -203,7 +203,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Your task now is to **tokenize** the text in the `text` field of each record into an array of words. Later on in this course, we will discuss learning better tokenizers. For now, you should separate words on whitespace (space, newline, tab) and punctuation. Convert the tokens to lower case, and keep only those tokens that have at least one letter a-z in them. In general, numerals in text tend not to follow Zipf's law but [Benford's law](https://en.wikipedia.org/wiki/Benford%27s_law). After you have tokenized, compute $N$, the total number of tokens in the corpus and print it out."
+        "Your task now is to **tokenize** the text in the `text` field of each record into an array of words. Later on in this course, we will discuss learning better tokenizers. For now, you should separate words on whitespace (space, newline, tab) and punctuation. Convert the tokens to lower case, and keep only those tokens that have at least one letter a-z in them. In general, numerals in text tend not to follow Zipf's law but [Benford's law](https://en.wikipedia.org/wiki/Benford%27s_law).\n",
+        "\n",
+        "You might use _regular expressions_ (e.g., the `re.split` function) to help with tokenization and filtering.\n",
+        "\n",
+        "After you have tokenized, compute $N$, the total number of tokens in the corpus and print it out."
       ],
       "metadata": {
         "id": "XbfYV9Fyi2UC"
