Note on Gradescope submission.

--- a/token_counts.ipynb
+++ b/token_counts.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "term-statistics.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOXuvwKeDw7VEOAYG5yCiB9",
+      "authorship_tag": "ABX9TyPLiUkAU7Mh6BHgUD9w7bqg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
         "\n",
         "In this first homework assignment, you will familiarize yourself with some empirical regularities of natural language, Shannon entropy and Zipf's Law.\n",
         "\n",
-        "Read through this Jupyter notebook and fill in the parts marked with `TODO`.\n",
+        "Read through this Jupyter notebook and fill in the parts marked with `TODO`. When you're ready to submit, print the notebook as a PDF and upload to Gradescope.\n",
         "\n",
         "## Shannon Entropy\n",
         "\n",
