--- a/token_counts.ipynb
+++ b/token_counts.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "term-statistics.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPLiUkAU7Mh6BHgUD9w7bqg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/dasmiq/cs6120-hw1/blob/main/token_counts.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ShenweiFFF/cs6120-hw1/blob/main/token_counts.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -51,7 +50,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# TODO: Enter the arrays of numbers of guesses for Texts 2, 3, and 4 here."
+        "# TODO: Enter the arrays of numbers of guesses for Texts 2, 3, and 4 here.\n",
+        "\n",
+        "# text2: federal officials began to stockpile ammunition\n",
+        "text2 = [15, 12, 7, 2, 4, 5, 8, 1, 21, 12, 10, 8, 9, 12, 3, 7, 2, 6, 1, 4, 8, 2, 11, 1, 9, 3, 1, 14, 6, 2, 7, 1, 3, 8, 5, 1, 2, 16, 4, 7, 3, 1, 8]\n",
+        "\n",
+        "# text3: to draw conclusions from materials often discordant is no easy task\n",
+        "text3 = [18, 2, 1, 14, 3, 1, 9, 1, 6, 2, 4, 8, 3, 2, 7, 4, 1, 11, 1, 5, 2, 16, 7, 1, 3, 8, 2, 1, 9, 1, 12, 4, 1, 2, 7, 1, 13, 5, 2, 8, 1, 1, 6, 3, 1, 11, 2, 9, 1, 4, 2, 17, 1, 4, 3, 1, 8, 1, 1, 15, 6, 1, 2, 9, 1, 3, 8]\n",
+        "\n",
+        "# text4: each iteration tends to beget a better copy than the last\n",
+        "text4 = [19, 1, 2, 8, 1, 12, 3, 1, 6, 2, 1, 7, 4, 2, 1, 14, 2, 1, 5, 3, 1, 11, 1, 4, 2, 8, 1, 1, 9, 2, 1, 6, 1, 1, 13, 5, 1, 3, 2, 1, 16, 4, 1, 2, 7, 1, 1, 10, 3, 1, 2, 8, 1]\n"
       ],
       "metadata": {
         "id": "n6siYs-p0-_E"
@@ -183,7 +191,7 @@
         "id": "_L3x1DRZhfTb",
         "outputId": "5afba698-3002-403e-aba1-9a0ca283ccb4"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
