--- a/token_counts.ipynb
+++ b/token_counts.ipynb
@@ -53,18 +53,18 @@
         "# TODO: Enter the arrays of numbers of guesses for Texts 2, 3, and 4 here.\n",
         "\n",
         "# text2: federal officials began to stockpile ammunition\n",
-        "text2 = [15, 12, 7, 2, 4, 5, 8, 1, 21, 12, 10, 8, 9, 12, 3, 7, 2, 6, 1, 4, 8, 2, 11, 1, 9, 3, 1, 14, 6, 2, 7, 1, 3, 8, 5, 1, 2, 16, 4, 7, 3, 1, 8]\n",
+        "text2 = [14, 5, 6, 3, 4, 7, 3, 1, 18, 8, 9, 3, 3, 4, 3, 3, 1, 1, 12, 8, 6, 4, 2, 1, 12, 8, 2, 10, 8, 7, 6, 3, 5, 2, 3, 1, 1, 12, 8, 9, 5, 2, 3, 4, 1, 2, 3]\n",
         "\n",
         "# text3: to draw conclusions from materials often discordant is no easy task\n",
-        "text3 = [18, 2, 1, 14, 3, 1, 9, 1, 6, 2, 4, 8, 3, 2, 7, 4, 1, 11, 1, 5, 2, 16, 7, 1, 3, 8, 2, 1, 9, 1, 12, 4, 1, 2, 7, 1, 13, 5, 2, 8, 1, 1, 6, 3, 1, 11, 2, 9, 1, 4, 2, 17, 1, 4, 3, 1, 8, 1, 1, 15, 6, 1, 2, 9, 1, 3, 8]\n",
+        "text3 = [20, 4, 2, 19, 8, 5, 4, 2, 16, 8, 4, 6, 2, 7, 5, 1, 4, 3, 4, 2, 10, 9, 7, 3, 1, 9, 4, 7, 2, 5, 6, 7, 4, 1, 1, 11, 6, 10, 2, 5, 1, 13, 4, 9, 3, 2, 2, 2, 2, 1, 2, 1, 10, 10, 1, 12, 6, 1, 12, 7, 7, 1, 1, 13, 7, 6, 2]\n",
         "\n",
         "# text4: each iteration tends to beget a better copy than the last\n",
-        "text4 = [19, 1, 2, 8, 1, 12, 3, 1, 6, 2, 1, 7, 4, 2, 1, 14, 2, 1, 5, 3, 1, 11, 1, 4, 2, 8, 1, 1, 9, 2, 1, 6, 1, 1, 13, 5, 1, 3, 2, 1, 16, 4, 1, 2, 7, 1, 1, 10, 3, 1, 2, 8, 1]\n"
+        "text4 = [9, 4, 4, 5, 1, 12, 4, 10, 2, 3, 5, 1, 4, 1, 2, 20, 7, 9, 4, 4, 1, 14, 9, 1, 11, 7, 8, 8, 6, 1, 18, 1, 15, 8, 8, 3, 8, 4, 1, 9, 9, 7, 5, 1, 8, 7, 10, 2, 1, 12, 7, 5, 1, 20, 10, 8, 9]\n"
       ],
       "metadata": {
         "id": "n6siYs-p0-_E"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
