--- a/token_counts.ipynb
+++ b/token_counts.ipynb
@@ -94,8 +94,7 @@
         "    guess_matrix[position][guess] += 1\n",
         "\n",
         "for row in guess_matrix:\n",
-        "  print(row)\n",
-        "\n"
+        "  print(row)"
       ],
       "metadata": {
         "id": "deK9pKWC1Qp_",
@@ -200,9 +199,9 @@
         "# TODO: Compute the upper bound for each amount of context N and print it out.\n",
         "import math\n",
         "\n",
-        "upper_bound = [0] * 27\n",
+        "upper_bound = [0] * 28\n",
         "\n",
-        "for i in range(27):\n",
+        "for i in range(28):\n",
         "  for j in guess_matrix:\n",
         "    if j[i] > 0:\n",
         "      upper_bound[i] -= j[i] * math.log2(j[i])\n",
@@ -211,18 +210,18 @@
       ],
       "metadata": {
         "id": "4ubcFqVv4CjC",
-        "outputId": "cdb09b9d-19fc-44ef-ce9f-73536f79e899",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dea3c07a-869a-4db0-cf41-9ae3b46b15a1"
       },
-      "execution_count": 17,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[0, -2.0, -4.0, 0.0, -6.0, 0.0, -2.0, 0.0, -2.0, -2.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0, 0.0, 0.0, 0.0, 0, 0, 0, 0, 0, 0]\n"
+            "[0, -2.0, -4.0, 0.0, -6.0, 0.0, -2.0, 0.0, -2.0, -2.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0, 0.0, 0.0, 0.0, 0, 0, 0, 0, 0, 0, 0]\n"
           ]
         }
       ]
@@ -250,15 +249,34 @@
       "source": [
         "# TODO: Compute thew lower bound for each amount of context N and print it out.\n",
         "\n",
-        "lower_bound = [0] * len(guess_matrix)\n",
+        "lower_bound = [0] * 28\n",
+        "\n",
+        "for i in range(27):\n",
+        "  for index, j in enumerate(guess_matrix):\n",
+        "    if j[i] > 0:\n",
+        "      lower_bound[i] += index * (j[i] - j[i+1]) * math.log2(j[i])\n",
+        "\n",
+        "print(lower_bound)\n",
         "\n",
         "\n"
       ],
       "metadata": {
-        "id": "QjRBkxVdB-4S"
+        "id": "QjRBkxVdB-4S",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "96448877-fab6-4a8b-835f-05585f091b63"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 46.0, 184.0, 0.0, 49.0, 0.0, 60.0, 0.0, 18.0, 78.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0, 0.0, 0.0, 0.0, 0, 0, 0, 0, 0, 0, 0]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
