--- a/token_counts.ipynb
+++ b/token_counts.ipynb
@@ -299,10 +299,32 @@
         "!wget \"http://khoury.northeastern.edu/home/dasmith/pg-sample.json.gz\""
       ],
       "metadata": {
-        "id": "iwJS1ClihN_I"
+        "id": "iwJS1ClihN_I",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "81200a2b-ea3a-4f61-b93e-4b9f24b2f248"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2025-09-11 16:44:58--  http://khoury.northeastern.edu/home/dasmith/pg-sample.json.gz\n",
+            "Resolving khoury.northeastern.edu (khoury.northeastern.edu)... 52.70.229.197\n",
+            "Connecting to khoury.northeastern.edu (khoury.northeastern.edu)|52.70.229.197|:80... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 150984197 (144M) [application/x-gzip]\n",
+            "Saving to: ‘pg-sample.json.gz’\n",
+            "\n",
+            "pg-sample.json.gz   100%[===================>] 143.99M  74.6MB/s    in 1.9s    \n",
+            "\n",
+            "2025-09-11 16:45:00 (74.6 MB/s) - ‘pg-sample.json.gz’ saved [150984197/150984197]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -332,9 +354,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_L3x1DRZhfTb",
-        "outputId": "5afba698-3002-403e-aba1-9a0ca283ccb4"
+        "outputId": "b58d594d-efbd-4a0b-95d0-af983d256800"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -368,13 +390,39 @@
       "cell_type": "code",
       "source": [
         "# TODO: Compute an array of tokens in the corpus\n",
-        "# Compute the total number of tokens N and print it out."
+        "# Compute the total number of tokens N and print it out.\n",
+        "import re\n",
+        "\n",
+        "# Read and process the gzipped JSON file\n",
+        "for line in gzip.open(\"pg-sample.json.gz\", mode=\"rt\", encoding=\"utf-8\"):\n",
+        "    rec = json.loads(line)\n",
+        "\n",
+        "    # Get the text field\n",
+        "    text = rec['text']\n",
+        "\n",
+        "    words = re.findall(r'[a-z]+', text.lower())\n",
+        "\n",
+        "# Print the total number of tokens\n",
+        "N = len(words)\n",
+        "print(N)"
       ],
       "metadata": {
-        "id": "EsVzek9vkgFc"
+        "id": "EsVzek9vkgFc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5c06ca9e-81a1-4f36-eabf-84a44eaee6bd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "90519\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
